--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^15.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^5.2.3",
-    "express-slow-down": "^1.4.0"
+    "express-slow-down": "^1.4.0",
+    "string-strip-html": "^13.0.6"
   },
   "engines": {
     "node": "16.x"
